# sqlmodel-examples

./: app.py  app_v2.py  db.db  exemplo_01.py  exemplo_02_relationship.py  pyproject.toml
