[tool.poetry]
name = "sql-model-tests"
version = "0.1.0"
description = ""
authors = ["Joao Pedro Watson <joaopedrowatson@hotmail.com>"]
readme = "README.md"
packages = [{include = "sql_model_tests"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlmodel = "^0.0.8"
ipython = "^8.14.0"
fastapi = {extras = ["all"], version = "^0.96.0"}


[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
